# SSD-single-shot-detection

./: .gitignore  README.md  pyproject.toml  visualize1.py  visualize2.py  visualize3.py  visualize_4x4_random.py
dataprovider/: data_loader.py  data_setter.py
model/ssd/: README.md  default_boxes.py  loss.py  metric.py  model.py
train/: train.py  trainer.py
